# ledger

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  build.rs  docker-compose.development.yml  docker-compose.infra.yml  docker-compose.yml  ledger  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  upload.sh
.cargo/: config.toml
apps/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
apps/backend/crates/common/src/entities/: file.rs  prelude.rs  refresh_token.rs  user.rs
apps/backend/crates/common/src/types/: mod.rs  upload_complete.rs  upload_init.rs
apps/backend/crates/common/src/types/file/: copy.rs  delete.rs  directory.rs  move.rs  rename.rs  upload_init.rs
apps/backend/crates/storage/src/: s3_scoped_storage.rs
apps/backend/entity/: Cargo.toml
apps/backend/entity/src/: file.rs  lib.rs  refresh_token.rs  user.rs
apps/backend/migration/: Cargo.toml
apps/backend/migration/src/: lib.rs  m20260319_222620_create_user.rs  m20260319_234718_create_refresh_token.rs  m20260321_142905_create_user.rs
apps/backend/services/authentication/: Cargo.toml
apps/backend/services/authentication/src/: main.rs
apps/backend/services/authentication/src/routes/: metadata.rs  mod.rs
apps/backend/services/authentication/src/routes/authentication/: info.rs  refresh.rs
apps/backend/services/authentication/src/routes/authentication/providers/: database.rs  github.rs  google.rs  mod.rs  success.rs
apps/backend/services/authentication/src/routes/file/: copy.rs  delete.rs  directory.rs  list.rs  metadata.rs  mod.rs  rename.rs
apps/backend/services/authentication/src/routes/user/: info.rs  mod.rs  refresh.rs
apps/backend/services/edge-worker/: Cargo.toml  wrangler.toml
apps/backend/services/edge-worker/src/: lib.rs
apps/backend/services/edge-worker/src/authentication/: authentication.rs  mod.rs
apps/backend/services/edge-worker/src/routes/: copy.rs  download.rs  metadata.rs  mod.rs  upload.rs  user.rs
apps/backend/services/edge-worker/src/types/: configuration.rs
apps/backend/src/: config.rs  context.rs  main.rs
apps/backend/src/authentication/: mod.rs  success.rs
apps/backend/src/authentication/routes/: info.rs  logout.rs  mod.rs  refresh.rs
apps/backend/src/authentication/routes/providers/: github.rs  google.rs  mod.rs
apps/backend/src/middleware/: authentication.rs
apps/backend/src/modules/: mod.rs
apps/backend/src/modules/grpc/: grpc_service.rs
apps/backend/src/modules/postgres/: file.rs  mod.rs  postgres_service.rs  upload.rs  user.rs
apps/backend/src/modules/redis/: builder.rs  file_log.rs  file_scan.rs  mod.rs  redis_service.rs
apps/backend/src/modules/s3/: delete.rs  download.rs  mod.rs  s3_service.rs  upload.rs
apps/backend/src/routes/: bulk.rs  create.rs  directory.rs  download.rs  file.rs  list.rs  mod.rs  test.rs  upload.rs
apps/backend/src/scheduler/: manager.rs  mod.rs
apps/backend/src/scheduler/tasks/: db_health_check.rs  mod.rs  redis_health_check.rs  track_files.rs
apps/backend/src/types/: error.rs  file.rs  mod.rs  response.rs  user.rs
apps/backend/src/util/: auth.rs  file.rs  id.rs  mod.rs
apps/backend/tools/cargo-upload/: Cargo.toml
apps/backend/web/: .gitignore
apps/backend/web/app/login/: page.module.scss
apps/backend/web/components/: TestButton.tsx
apps/backend/web/components/browser/popups/: CreateFolder.module.scss  DeleteFile.tsx
apps/backend/web/components/general/menu/: ContextMenuItem.module.scss
apps/backend/web/components/transfer/: TransferWindow.module.scss
apps/backend/web/lib/api/: apiClient.ts  file.ts
apps/backend/web/lib/types/: file.ts
apps/backend/web/lib/types/requests/: uploadInitRequest.ts
crates/common/: Cargo.toml
crates/common/.cargo/: config.toml
crates/common/src/: lib.rs
crates/common/src/api/: mod.rs  upload_init.rs
crates/common/src/entities/: auth_session.rs  file.rs  mod.rs  passkey.rs  prelude.rs  user.rs
crates/common/src/types/: file_claims.rs  list.rs  metadata.rs  mod.rs  user_claims.rs  user_info.rs
crates/common/src/types/authentication/: mod.rs  passkey_auth_complete.rs  passkey_auth_init.rs  passkey_complete.rs  passkey_init.rs
crates/common/src/types/file/: copy.rs  delete.rs  directory.rs  directory_delete.rs  download_init.rs  explode.rs  file_claims.rs  list.rs  metadata.rs  mod.rs  move.rs  rename.rs  share.rs  upload_complete.rs  upload_init.rs
crates/common/src/types/user/: mod.rs  user_info.rs
crates/common/src/util/: authentication.rs
services/authentication/: Cargo.toml
services/authentication/src/: main.rs
services/authentication/src/middleware/: middleware.rs
services/authentication/src/routes/: metadata.rs  mod.rs  upload.rs
services/authentication/src/routes/authentication/: logout.rs  mod.rs
services/authentication/src/routes/authentication/providers/: github.rs
services/authentication/src/routes/file/: copy.rs  delete.rs  delete_directory.rs  directory.rs  explode.rs  list.rs  metadata.rs  mod.rs  move.rs  rename.rs  upload.rs
services/authentication/src/routes/user/: info.rs  logout.rs  mod.rs  refresh.rs
services/authentication/src/routes/user/passkey/: complete_login.rs  complete_registration.rs  init_login.rs  init_registration.rs  mod.rs
services/authentication/src/routes/user/providers/: database.rs  github.rs  google.rs  success.rs
services/edge-worker/: Cargo.toml  wrangler.toml
services/edge-worker/src/: lib.rs
services/edge-worker/src/authentication/: authentication.rs  mod.rs
services/edge-worker/src/routes/: copy.rs  delete.rs  directory.rs  download.rs  list.rs  metadata.rs  mod.rs  move.rs  rename.rs  share.rs  share_download.rs  upload.rs  user.rs  user_info.rs  user_logout.rs  user_refresh.rs  zip.rs
services/edge-worker/src/types/: authentication.rs  configuration.rs  error.rs  mod.rs
services/edge-worker/src/util/: authentication.rs
tools/cargo-download/: Cargo.toml
tools/cargo-download/src/: main.rs
tools/cargo-upload/: Cargo.toml
tools/cargo-upload/src/: main.rs
(+330 files in other folders)
