[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [
    "crates/*",
    "migration",
    "services/*",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
aws-sdk-s3 = "1.0"
sea-orm = "2.0.0-rc.37"
