[workspace]
resolver = "3"
members = [
    "crates/*",
    "migration",
    "services/*",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["sync", "macros"] }
aws-sdk-s3 = "1.0"
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-postgres", "runtime-tokio"] }
env_logger = "0.11.9"

[profile.release]
lto = true
strip = true
codegen-units = 1