[package]
name = "ledger"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
ledger-common.workspace = true
ledger-backend-entity.workspace = true
ledger-backend-migration.workspace = true

actix-web.workspace = true
actix-web-httpauth.workspace = true
actix-multipart.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
env_logger.workspace = true
uuid.workspace = true
tracing.workspace = true
log.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
base64.workspace = true

# Backend-specific dependencies
sanitize-filename = "0.6.0"
redis = { version = "0.25.4", features = ["aio", "tokio-comp", "connection-manager"] }
deadpool-redis = { version = "0.15.0", features = ["serde"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.103.0"
hex = "0.4.3"
tokio-util = "0.7.18"
futures-util = "0.3.31"
async-trait = "0.1.89"
futures = "0.3.31"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "*", features = ["vendored"] }
