[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.12.1" }
actix-multipart = "0.7.2"
tokio = { version = "1.49.0", features = ["full"] }
sanitize-filename = "0.6.0"
dotenv = "0.15.0"
log = "0.4.29"
env_logger = "0.11"
tracing = "0.1"
redis = { version = "0.25.4", features = ["aio", "tokio-comp", "connection-manager"] }
deadpool-redis = { version = "0.15.0", features = ["serde"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
aws-sdk-s3 = "1.103.0"
base64 = "0.22.1"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = "0.7.18"
migration = { path = "migration" }
entity = { path = "entity" }
anyhow = "1.0.100"
serde_json = "1.0.148"
thiserror = "2.0.17"
tonic = "*"
prost = "0.14"
tonic-prost = "*"
actix-web-httpauth = "0.8.2"
futures-util = "0.3.31"
async-trait = "0.1.89"
chrono = "0.4.42"
futures = "0.3.31"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "*", features = ["vendored"] }

[workspace]
members = ["tools/cargo-upload", "tools/cargo-download", "migration", "entity"]

[build-dependencies]
tonic-prost-build = "*"

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4",
]
