[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
default = ["ssr"]
ssr = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-postgres"]

[dependencies]
sea-orm = { version = "2.0.0-rc.37", optional = true, default-features = false, features = ["macros", "with-chrono", "with-uuid", "with-json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
ts-rs = { version = "12.0", features = ["serde-json-impl"] }