[package]
name = "authentication"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "authentication"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
sea-orm = { workspace = true }
actix-web = "4.13.0"
common = { path = "../../crates/common", features = ["ssr"] }
storage = { path = "../../crates/storage" }
migration = { path = "../../migration" }
uuid = { version = "1.22.0", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
env_logger = { workspace = true }
log = "0.4.29"
futures = "0.3.32"
chrono = "0.4.44"
aws-sdk-s3 = "1.127.0"
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation", "conditional-ui"] }
base64 = "0.22.1"