[package]
name = "edge-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
jsonwebtoken = "10.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
worker = "0.7.5"
rusty-s3 = "0.8.1"
common = { path = "../../crates/common" }
uuid = { version = "1.22.0", features = ["v4"] }
