[package]
name = "edge-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.149"
worker = "0.7.5"
rusty-s3 = "0.8.1"
common = { path = "../../crates/common", default-features = false }
uuid = { version = "1.22.0", features = ["v4", "js"] }
getrandom =  { version = "0.2.17", features = ["js"] }
jiff = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.114"