[package]
name = "edge-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.149"
worker = "0.7.5"
rusty-s3 = { version = "0.8.1", default-features = false }
common = { path = "../../crates/common", default-features = false }
uuid = { version = "1.22.0", features = ["v4", "js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
jiff = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4.64"
async_zip = "0.0.18"
web-sys = "0.3.91"