[package]
name = "cargo-download"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand to download"
authors = ["Crush"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.148"
