[package]
name = "cargo-download"
version.workspace = true
edition = "2021"
description = "Cargo subcommand to download"
authors = ["Crush"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["multipart"] }
tokio.workspace = true
serde_json.workspace = true
