[package]
name = "cargo-upload"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand to proxy upload.sh"
authors = ["Crush"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.11.0-rc.0"